finished the project pages!!

--- a/misc.html
+++ b/misc.html
@@ -31,7 +31,7 @@
 	<a href="projects/lily.html"><img class="tile" src="assets/projecttile-37.png"></a>
 	<a href="projects/engs33.html"><img class="tile" src="assets/projecttile-53.png"></a>
 	<a href="projects/lapdesk.html"><img class="tile" src="assets/projecttile-54.png"></a>
-	<img class="tile" src="assets/projecttile-38.png">
+	<a href="projects/diner.html"><img class="tile" src="assets/projecttile-38.png"></a>
 
 </div>
 
