--- a/projects/diner.html
+++ b/projects/diner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Branding | Humbug</title>
+	<title>Regina | Modeling | Diner</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300,700">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,34 +15,41 @@
 			<a href="../designthinking.html" class="unselected">Design Thinking</a><a class="hide">__</a>
 			<a href="../uiux.html" class="unselected">UI/UX</a><a class="hide">__</a>
 			<a href="../illustration.html" class="unselected">Illustration</a><a class="hide">__</a>
-			<a href="../branding.html" class="active">Branding</a><a class="hide">__</a>
-			<a href="../misc.html" class="unselected">Modeling</a><a class="hide">__</a>
+			<a href="../branding.html" class="unselected">Branding</a><a class="hide">__</a>
+			<a href="../misc.html" class="active">Modeling</a><a class="hide">__</a>
 			<a href="../about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
 		</div>
 	</header>
 </div>
 
-<div class="top_padding"></div>	
-	<div class="box_content">
+<div class="top_padding"></div>
+<div class="box_content">
 		<div class="proj_img">
-			<img src="../assets/projecttile-10.png" style= "height:450px; width:450px;">
+			<img src="../assets/projecttile-38.png" style= "height:450px; width:450px;">
 		</div>
+
 		<p>
-		I created this banner and logo for the Humbug, a student-run literary magazine at Dartmouth. The logo takes inspiration from the Humbug character in the Phantom Tollbooth. I was going for something elegant but playful in the illustration. I chose a serif font that had a "classy" feel to go with the logo, and was inspired by designs by "The New Yorker" in my creation process.  
+		My CS 22 class spent four weeks modeling a room in Maya. I decided to create a diner, which takes various aspects of my favorite high school locations (such as the retro games from my ice rink, diner tables from Winstead’s, etc). 
 		</p>
 		<p>
-		This first banner was my initial design (with the font created by hand with the vector tool), and after receiving feedback, I switched the font and color to better suit the literary magazine feel as well as have consistency with Dartmouth's green color palette.	
+		I used mental ray for the rendering, and hopefully if I have some time in the future, I will re-render the scene using Maya’s new Arnold Renderer which creates much more realistic-looking shots! I would also work on the texturing because that can definitely be improved. Either way, I am proud of my work, and below are some screenshots of the room renderings!
 		</p>
+		
+
 		<div class="proj_img">
-			<img src="../assets/hum1.png" style= "height:120px; width:482px;">
+			<img src="../assets/diner1.png" style= "height:283px; width:506px;">
+			<img src="../assets/diner2.png" style= "height:363px; width:434px;">
+			<img src="../assets/diner3.png" style= "height:284px; width:508px;">
+			<img src="../assets/diner4.png" style= "height:328px; width:506px;">
+			<img src="../assets/diner5.png" style= "height:317px; width:507px;">
 		</div>
-		<p>
-		The following design is the final revision I created after taking feedback from the Humbug's editor-in-chief.
-		</p>
-		<div class="proj_img">
-			<img src="../assets/hum2.png" style= "height:105px; width:482px;">
-		</div>
+
+		
+		<br>
+		<br>
+
+
 	</div>
 	<br>
 	<br>
