--- a/projects/earthweek.html
+++ b/projects/earthweek.html
@@ -27,14 +27,16 @@
 	<div class="box_content">
 		<div class="proj_img">
 			<img src="../assets/earthweeklogo.png" style= "height:450px; width:450px;">
-			<img src="../assets/EWCalendar.jpeg" style= "height:612px; width:792px;">
-			<img src="../assets/farmfreshfriday1.jpg" style= "height:512px; width:396px;">
-			<img src="../assets/swapandshop.png" style= "height:512px; width:396px;">
 		</div>
 			<p>
 			The Sustainability Office asked me to help design and brand the 2017 Earth Week, which is a week-long series of events that promote sustainability, such as a social justice dinner, seminar discussions, fresh local food, and 2nd hand clothing pop-up shop. 
 			I was given a lot of freedom with this project and ultimately created the logo and posters for the events.   
 			</p>
+		<div class="proj_img">
+			<img src="../assets/EWCalendar.jpeg" style= "height:306px; width:396px;">
+			<img src="../assets/farmfreshfriday1.jpg" style= "height:512px; width:396px;">
+			<img src="../assets/swapandshop.png" style= "height:512px; width:396px;">
+		</div>
 			<p>
 			<b>TAKEAWAYS</b>
 			</p>
