adding mockup images

--- a/projects/apologia.html
+++ b/projects/apologia.html
@@ -26,7 +26,7 @@
 <div class="top_padding"></div>	
 	<div class="box_content">
 		<div class="proj_img">
-			<img src="../assets/apologia-01.png" style= "height:660px; width:510px;">
+			<img src="../assets/apologiamock.png" style= "height:425px; width:554px;">
 		</div>
 		<p>
 		The Dartmouth Apologia is a journal, blog and forum that articulates Christian perspectives in the academic community. Apologia asked me to design the front and back of its 2018 Spring issue, whose cover article revolved around Plato's Allegory of the Cave. 
