--- a/projects/dmcposter.html
+++ b/projects/dmcposter.html
@@ -26,6 +26,7 @@
 <div class="top_padding"></div>	
 	<div class="box_content">
 		<div class="proj_img">
+<!-- 			<img src="../assets/dmcmock.png" style= "height:385px; width:650px;"> -->
 			<img src="../assets/pouroneout.png" style= "height:432px; width:306px;">
 			<img src="../assets/dmcposter.png" style= "height: 432px; width:306px;">
 		</div>
