--- a/projects/nudg.html
+++ b/projects/nudg.html
@@ -26,7 +26,7 @@
 <div class="top_padding"></div>
 <div class="box_content">
 		<div class="proj_img">
-			<img src="../assets/projecttile-43.png" style= "height:450px; width:450px;">
+			<img src="../assets/nudgmock.png" style= "height:410px; width:537px;">
 		</div>
 		<p>
 		<b>Status: Prototyping / Iterating</b>
@@ -53,7 +53,7 @@
 		</p>
 
 		<div class="proj_img">
-		<img src="../assets/nudgScreen.png" style= "height:429px; width:720px;">
+		<img src="../assets/nudgScreen.png" style= "height:343px; width:576px;">
 		</div>
 
 		<p>
