--- a/projects/ef.html
+++ b/projects/ef.html
@@ -62,7 +62,7 @@
 		<br>
 
 		<div class="proj_img">
-		<img src="../assets/EFcollage3.png" style= "height:365px; width:710px;">
+		<img src="../assets/EFmock.png" style= "height:365px; width:560px;">
 		<br>
 		<p><b>Recruitment and Brand Marketing Guide (internal)</b></p>
 		<p>I found that this job was very flexible with a lot of freedom. However, the expectations felt vague at times, so I wrote, designed, printed, and bound this pamphlet that serves as an on-boarding guide for the next intern in this position.</p>
