--- a/projects/snowwars.html
+++ b/projects/snowwars.html
@@ -26,7 +26,8 @@
 <div class="top_padding"></div>	
 	<div class="box_content">
 		<div class="proj_img">
-			<img src="../assets/snowwars_final11-01.png" style= "height:1080px; width:720px;">
+			<!-- <img src="../assets/snowwars_final11-01.png" style= "height:1080px; width:720px;"> -->
+			<img src="../assets/snowwarsmock.png" style= "height:600px; width:600px;">
 		</div>
 			<p>
 			Dartmouth's 2018 Winter Carnival theme was "Snow Wars: May the Frost be with You". Motivated by coming in second in the poster design contest last year, I created this design in Illustrator with help from all the feedback I received from my last submission. This poster features the classic skier, here as Dartmouth Vader, and the structures surrounding him reference Dartmouth buildings (such as our iconic Baker Berry tower on the left).  
