fixed image bug

--- a/designthinking.html
+++ b/designthinking.html
@@ -65,12 +65,12 @@
 	<p>Imagine you work for a company that creates conceptual models for wild roller coaster rides. A new park opened up, and they want the coolest ride every -- no need to worry about insurance, you can add all the jumps and tricks you want! What would you create?</p>
 	<p>Well, my group of four decided to create "Secrets of the Sea", a ride featuring mythological creatures and terrifying tales. You begin in a capsizing pirate ship, ride the waves down through the Kraken's mouth, navigate the Bermuda Triangle, travel through the River Styx, surface through a fish, find hidden treasure, and ultimately land among the Sirens</p>
 	<div style="text-align: center">
-		<img src="assets/coaster_group.jpg" style="width: 400px; height:300px">
+		<img src="assets/coaster_group.png" style="width: 400px; height:300px">
 	</div>	
 	<div style="text-align: center; display: inline-block">
-		<img src="assets/coaster_0.jpg" style="width: 400px; height:300px">
-		<img src="assets/coaster_2.jpg" style="width: 400px; height:300px">
-		<img src="assets/coaster_1.jpg" style="width: 400px; height:300px">
+		<img src="assets/coaster_0.png" style="width: 400px; height:300px">
+		<img src="assets/coaster_2.png" style="width: 400px; height:300px">
+		<img src="assets/coaster_1.png" style="width: 400px; height:300px">
 	</div>
 	<p><b>TAKEAWAY:</b> From this project, I learned how to <b>effectively and rapidly prototype</b>. So oftern I have ideas that I spend hours refining, but honestly sometimes you just have to stop thinking and start doing! I also learned some soft skills such as <b>working well with others</b> -- it takes some understanding and proper mindset to <b>turn a "group" into a "team"</b>, and we accomplished that by sacrificing individual needs (like time) for the betterment of the team. Ultimately, that meant we finished building quickly, created something we were all proud of, and did not have to pull the dreaded all-nighter that this project is known for!</p>
 	<p>Bonus takeaway: I learned that I need remember to record a video of my future kinetic creations since I realized I forgot to do that here...</p>
